==> wyardt/OV7670/Src/ov7670.c <==
#include "OV7670.h"
#include "stm32f4xx.h"

void OV7670_GPIO_Init(void)
{
  
  GPIO_InitTypeDef GPIO_InitStructure;
   /* Enable GPIOC  clock */
  __HAL_RCC_GPIOC_CLK_ENABLE();
  GPIO_InitStructure.Pin =  GPIO_PIN_0|GPIO_PIN_1|GPIO_PIN_2|GPIO_PIN_3|GPIO_PIN_4|GPIO_PIN_5|GPIO_PIN_6|GPIO_PIN_7;
  GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
  GPIO_InitStructure.Speed = GPIO_SPEED_HIGH; 
  HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);
}

void OV7670_GPIO_CONTRL_CONFIG(void)
{
  
    GPIO_InitTypeDef GPIO_InitStructure;
    __HAL_RCC_GPIOA_CLK_ENABLE();
    GPIO_InitStructure.Pin = LCD_HREF_BIT|LCD_VSYNC_BIT|LCD_PCLK_BIT;
    GPIO_InitStructure.Speed = GPIO_SPEED_HIGH; 
    GPIO_InitStructure.Mode = GPIO_MODE_INPUT; 
    HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);
    
    //HAL_RCC_MCOConfig(RCC_MCO2, RCC_MCO1SOURCE_HSE, RCC_MCODIV_1);
}

unsigned char wrOV7670Reg(unsigned char regID, unsigned char regDat)
{
	HAL_StatusTypeDef sta;
	uint8_t arr[2] = {regID, regDat};
	
	sta = HAL_I2C_Master_Transmit(&heval_I2c, 0x42, arr, 2, 100);
	if (HAL_OK != sta)
	{
		BSP_LED_Toggle(LED3);
	}
	else
	{
		BSP_LED_Toggle(LED2);
	}
	HAL_Delay(100);
	return sta;
	startSCCB();
	if(0==SCCBwriteByte(0x42))
	{
		stopSCCB();
		return(0);
	}
	HAL_Delay(100);
  	if(0==SCCBwriteByte(regID))
	{
		stopSCCB();
		return(0);
	}
	HAL_Delay(100);
  	if(0==SCCBwriteByte(regDat))
	{
		stopSCCB();
		return(0);
	}
  	stopSCCB();
	
  	return(1);
}
